--- a/config/database.yml
+++ b/config/database.yml
@@ -21,6 +21,8 @@ staging:
 
 production:
   <<: *default
-  database: nasb-magento-quickbooks_production
+  database: nasb_magento_quickbooks_production
   username: <%= ENV['DATABASE_USERNAME'] %>
   password: <%= ENV['DATABASE_PASSWORD'] %>
+  host:     <%= ENV['DATABASE_HOST']%>
+  port:     <%= ENV['DATABASE_PORT']%>
