--- a/dot.env
+++ b/dot.env
@@ -21,7 +21,7 @@ MAGENTO_PRO_ADMIN_PASSWORD=rotati123
 
 MAGENTO_PRO_URL="https://truenorthseedbank.com"
 
-ADMIN_URL_SLASH="96admin89x55"
+ADMIN_URL_SLASH="adm45inz3x"
 
 MAGENTO_STAGING_CONSUMER_KEY=cd90e534f38af92ef3e500083a82e6e5
 MAGENTO_STAGING_CONSUMER_SECRET=17908ed65c7b1641d3fa91f8b367a85a
@@ -70,7 +70,7 @@ MAGENTO_PRO_ADMIN_PASSWORD=rotati123
 
 MAGENTO_PRO_URL="https://truenorthseedbank.com"
 
-ADMIN_URL_SLASH="96admin89x55"
+ADMIN_URL_SLASH="adm45inz3x"
 
 MAGENTO_STAGING_CONSUMER_KEY=cd90e534f38af92ef3e500083a82e6e5
 MAGENTO_STAGING_CONSUMER_SECRET=17908ed65c7b1641d3fa91f8b367a85a
